@@ -2,11 +2,15 @@ package server;
 
 import chess.ChessGame;
 import com.google.gson.Gson;
+import dataaccess.ResponseException;
 import model.AuthData;
 import model.GameData;
 import org.eclipse.jetty.websocket.api.Session;
 import org.eclipse.jetty.websocket.api.annotations.*;
-import websocket.commands.UserGameCommand;
+import websocket.commands.*;
+import websocket.messages.Error;
+import websocket.messages.LoadGame;
+import websocket.messages.Notification;
 import websocket.messages.ServerMessage;
 
 import java.io.IOException;
@@ -17,10 +21,10 @@ public class WebsocketHandler {
 
     private static final Gson gson = new Gson();
 
-
     @OnWebSocketConnect
     public void onConnect(Session session) {
         System.out.println("New WebSocket connection established: " + session.getRemoteAddress().getAddress());
+        // Initially, the session is not associated with any game (0 means "none")
         Server.gameSessions.put(session, 0);
     }
 
@@ -36,22 +40,28 @@ public class WebsocketHandler {
         System.out.println("Received message: " + message);
 
         try {
-            // Deserialize incoming JSON to a UserGameCommand object
-            UserGameCommand command = gson.fromJson(message, UserGameCommand.class);
-
-            // Process the command based on its type
-            switch (command.getCommandType()) {
-                case CONNECT:
-                    handleConnectCommand(session, command);
+            // First, deserialize to the base class to determine the command type.
+            UserGameCommand baseCommand = gson.fromJson(message, UserGameCommand.class);
+            switch (baseCommand.getCommandType()) {
+                case JOIN_PLAYER:
+                    JoinPlayer joinPlayer = gson.fromJson(message, JoinPlayer.class);
+                    handleJoinPlayerCommand(session, joinPlayer);
+                    break;
+                case JOIN_OBSERVER:
+                    JoinObserver joinObserver = gson.fromJson(message, JoinObserver.class);
+                    handleJoinObserverCommand(session, joinObserver);
                     break;
                 case MAKE_MOVE:
-                    handleMakeMoveCommand(session, command);
+                    MakeMove makeMove = gson.fromJson(message, MakeMove.class);
+                    handleMakeMoveCommand(session, makeMove);
                     break;
                 case LEAVE:
-                    handleLeaveCommand(session, command);
+                    Leave leave = gson.fromJson(message, Leave.class);
+                    handleLeaveCommand(session, leave);
                     break;
                 case RESIGN:
-                    handleResignCommand(session, command);
+                    Resign resign = gson.fromJson(message, Resign.class);
+                    handleResignCommand(session, resign);
                     break;
                 default:
                     sendErrorMessage(session, "Unknown command type.");
@@ -69,97 +79,158 @@ public class WebsocketHandler {
         error.printStackTrace();
     }
 
-    // === Command Handling Methods ===
-
-    // Handles the CONNECT command:
-    // - Validates the user (authToken, gameID, etc.)
-    // - Sends a LOAD_GAME message to the connecting (root) client
-    // - Broadcasts a NOTIFICATION to other connected clients in the game
-    private void handleConnectCommand(Session session, UserGameCommand command) throws Exception {
+    private void handleJoinPlayerCommand(Session session, JoinPlayer command) throws Exception {
         try {
             AuthData auth = Server.userService.getAuth(command.getAuthToken());
             GameData game = Server.gameService.getGameData(command.getAuthToken(), command.getGameID());
 
-            ChessGame.TeamColor joiningColor = command.getTeamColor().toString().equalsIgnoreCase("white") ? ChessGame.TeamColor.WHITE : ChessGame.TeamColor.BLACK;
+            ChessGame.TeamColor joiningColor =
+                    command.getColor().equalsIgnoreCase("white") ? ChessGame.TeamColor.WHITE : ChessGame.TeamColor.BLACK;
 
+            // Check that the player's username matches the expected color assignment.
             boolean correctColor;
             if (joiningColor == ChessGame.TeamColor.WHITE) {
                 correctColor = Objects.equals(game.whiteUsername(), auth.username());
-            }
-            else {
+            } else {
                 correctColor = Objects.equals(game.blackUsername(), auth.username());
             }
 
             if (!correctColor) {
                 Error error = new Error("Error: attempting to join with wrong color");
-                sendError(session, error);
+                sendMessage(session, error);
                 return;
             }
 
-            Notification notif = new Notification("%s has joined the game as %s".formatted(auth.username(), command.getColor().toString()));
+            Server.gameSessions.put(session, command.getGameID());
+
+            Notification notif = new Notification(
+                    String.format("%s has joined the game as %s", auth.username(), command.getColor()));
             broadcastMessage(session, notif);
 
             LoadGame load = new LoadGame(game.game());
             sendMessage(session, load);
+        } catch (ResponseException e) {
+            sendMessage(session, new Error(e.getMessage()));
         }
-        catch (UnauthorizedException e) {
-            sendError(session, new Error("Error: Not authorized"));
-        } catch (BadRequestException e) {
-            sendError(session, new Error("Error: Not a valid game"));
+    }
+
+    private void handleJoinObserverCommand(Session session, JoinObserver command) throws Exception {
+        try {
+            AuthData auth = Server.userService.getAuth(command.getAuthToken());
+            GameData game = Server.gameService.getGameData(command.getAuthToken(), command.getGameID());
+
+            Server.gameSessions.put(session, command.getGameID());
+
+            Notification notif = new Notification(
+                    String.format("%s has joined the game as an observer", auth.username()));
+            broadcastMessage(session, notif);
+
+            LoadGame load = new LoadGame(game.game());
+            sendMessage(session, load);
+        } catch (Exception e) {
+            sendMessage(session, new Error("Error: Not authorized"));
         }
-
     }
 
-    // Handles the MAKE_MOVE command:
-    // - Validates and processes the move
-    // - Updates the game state and the database
-    // - Sends a LOAD_GAME update to all clients and broadcasts a move notification
-    private void handleMakeMoveCommand(Session session, UserGameCommand command) {
-        // TODO: Process the move using your chess logic (e.g., gameService.makeMove(...))
-        // For demonstration, create a dummy updated game state:
-        ServerMessage loadGameMessage = new ServerMessage(ServerMessage.ServerMessageType.LOAD_GAME);
-        loadGameMessage.setGame("Updated game state after move"); // Replace with actual updated game
+    // Handles a MAKE_MOVE command.
+    private void handleMakeMoveCommand(Session session, MakeMove command) throws Exception {
+        try {
+            AuthData auth = Server.userService.getAuth(command.getAuthToken());
+            GameData game = Server.gameService.getGameData(command.getAuthToken(), command.getGameID());
+            ChessGame.TeamColor userColor = getTeamColor(auth.username(), game);
+            if (userColor == null) {
+                sendMessage(session, new Error("Error: You are observing this game"));
+                return;
+            }
+            if (game.game().isGameOver()) {
+                sendMessage(session, new Error("Error: cannot make a move, game is over"));
+                return;
+            }
+            if (!game.game().getTeamTurn().equals(userColor)) {
+                sendMessage(session, new Error("Error: it is not your turn"));
+                return;
+            }
 
-        // Send updated game state to the current session
-        sendMessage(session, loadGameMessage);
+            // Process the move (using your chess logic).
+            game.game().makeMove(command.getMove());
 
-        // TODO: Broadcast a NOTIFICATION message to all other sessions:
-        // e.g., "Alice made move: E2-E4"
+            Notification notif;
+            ChessGame.TeamColor opponentColor =
+                    userColor == ChessGame.TeamColor.WHITE ? ChessGame.TeamColor.BLACK : ChessGame.TeamColor.WHITE;
+            if (game.game().isInCheckmate(opponentColor)) {
+                notif = new Notification(String.format("Checkmate! %s wins!", auth.username()));
+                game.game().setGameOver(true);
+            } else if (game.game().isInStalemate(opponentColor)) {
+                notif = new Notification(String.format("Stalemate caused by %s's move! It's a tie!", auth.username()));
+                game.game().setGameOver(true);
+            } else if (game.game().isInCheck(opponentColor)) {
+                notif = new Notification(String.format("A move has been made by %s, %s is now in check!",
+                        auth.username(), opponentColor));
+            } else {
+                notif = new Notification(String.format("A move has been made by %s", auth.username()));
+            }
+            // Broadcast the notification to all clients in this game.
+            broadcastMessage(session, notif, true);
+
+            // Update the game in the database.
+            Server.gameService.updateGame(auth.authToken(), game);
+
+            LoadGame load = new LoadGame(game.game());
+            broadcastMessage(session, load, true);
+        } catch (ResponseException e) {
+            sendMessage(session, new Error(e.getMessage()));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
     }
 
-    // Handles the LEAVE command:
-    // - Processes the removal of the user from the game
-    // - Updates the database if necessary
-    // - Sends a NOTIFICATION to other clients in the game
-    private void handleLeaveCommand(Session session, UserGameCommand command) {
-        // TODO: Remove the user from the game and update your DB
-
-        ServerMessage notification = new ServerMessage();
-        notification.setServerMessageType(ServerMessage.ServerMessageType.NOTIFICATION);
-        notification.setMessage("Player has left the game.");
-
-        sendMessage(session, gson.toJson(notification));
-
-        // TODO: Broadcast this notification to other connected sessions in the game
+    // Handles a LEAVE command.
+    private void handleLeaveCommand(Session session, Leave command) throws ResponseException {
+        try {
+            AuthData auth = Server.userService.getAuth(command.getAuthToken());
+            Notification notif = new Notification(String.format("%s has left the game", auth.username()));
+            broadcastMessage(session, notif);
+            session.close();
+        } catch (ResponseException e) {
+            sendMessage(session, new Error(e.getMessage()));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
     }
 
-    // Handles the RESIGN command:
-    // - Marks the game as over, updates the database, and sends a resignation notification
-    private void handleResignCommand(Session session, UserGameCommand command) {
-        // TODO: Process the resignation logic, update game state and DB
-
-        ServerMessage notification = new ServerMessage();
-        notification.setServerMessageType(ServerMessage.ServerMessageType.NOTIFICATION);
-        notification.setMessage("Player has resigned.");
-
-        sendMessage(session, gson.toJson(notification));
-
-        // TODO: Broadcast this notification to all sessions in the game
+    // Handles a RESIGN command.
+    private void handleResignCommand(Session session, Resign command) throws Exception {
+        try {
+            AuthData auth = Server.userService.getAuth(command.getAuthToken());
+            GameData game = Server.gameService.getGameData(command.getAuthToken(), command.getGameID());
+            ChessGame.TeamColor userColor = getTeamColor(auth.username(), game);
+            if (userColor == null) {
+                sendMessage(session, new Error("Error: You are observing this game"));
+                return;
+            }
+            if (game.game().isGameOver()) {
+                sendMessage(session, new Error("Error: The game is already over!"));
+                return;
+            }
+            game.game().setGameOver(true);
+            Server.gameService.updateGame(auth.authToken(), game);
+            String opponentUsername = userColor == ChessGame.TeamColor.WHITE ?
+                    game.blackUsername() : game.whiteUsername();
+            Notification notif = new Notification(
+                    String.format("%s has forfeited, %s wins!", auth.username(), opponentUsername));
+            broadcastMessage(session, notif, true);
+        } catch (ResponseException e) {
+            sendMessage(session, new Error(e.getMessage()));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
     }
 
-    // === Utility Methods ===
+    // =====================
+    // Utility Methods
+    // =====================
 
-    // Sends a message to a single session
+    // Sends a ServerMessage to a single session.
     private void sendMessage(Session session, ServerMessage message) {
         try {
             if (session.isOpen()) {
@@ -170,15 +241,14 @@ public class WebsocketHandler {
         }
     }
 
+    // Broadcasts a message to all sessions in the same game as currSession.
     public void broadcastMessage(Session currSession, ServerMessage message) throws IOException {
         broadcastMessage(currSession, message, false);
     }
 
     public void broadcastMessage(Session currSession, ServerMessage message, boolean toSelf) throws IOException {
         System.out.printf("Broadcasting (toSelf: %s): %s%n", toSelf, gson.toJson(message));
-        // Loop through all sessions tracked in the Server.gameSessions map.
         for (Session session : Server.gameSessions.keySet()) {
-            // Check that the session is in a game and that it is in the same game as the originating session.
             boolean inAGame = !Objects.equals(Server.gameSessions.get(session), 0);
             boolean sameGame = Server.gameSessions.get(session).equals(Server.gameSessions.get(currSession));
             boolean isSelf = session == currSession;
@@ -188,6 +258,7 @@ public class WebsocketHandler {
         }
     }
 
+    // Determines the team color of a user in a game.
     private ChessGame.TeamColor getTeamColor(String username, GameData game) {
         if (username.equals(game.whiteUsername())) {
             return ChessGame.TeamColor.WHITE;
@@ -198,9 +269,9 @@ public class WebsocketHandler {
         }
     }
 
-    // Sends an error message to the client, ensuring the message includes the word "error"
+    // Sends an error message (ensuring the message includes "error").
     private void sendErrorMessage(Session session, String errorMessage) throws IOException {
         System.out.printf("Error: %s%n", errorMessage);
-        session.getRemote().sendString(errorMessage);
+        sendMessage(session, new Error("Error: " + errorMessage));
     }
 }
